--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h1 {
    curser: pointer;
    margin-right: 30px:auto;
    padding: 8px 18px;
-   border: 1px solid #204156
+   border: 1px solid #204156;
    position: relative;
 }
 
